--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /tmp
 /out-tsc
 /bazel-out
+/documentation
 
 # Node
 /node_modules
@@ -39,4 +40,3 @@ testem.log
 
 # System files
 .DS_Store
-Thumbs.db
