refactor: atualizando métodos e add modal para edição

--- a/tsconfig.doc.json
+++ b/tsconfig.doc.json
@@ -5,5 +5,5 @@
       "types": []
     },
     "include": ["src/**/*.ts"],
-    "exclude": ["src/test.ts", "src/**/*.spec.ts", "src/app/file-to-exclude.ts","/home/uxa/Estudos/todoList/src/environments/*.environment.ts"]
+    "exclude": ["src/test.ts", "src/**/*.spec.ts", "src/app/file-to-exclude.ts"]
   }
